# serializer version: 1
# name: test_set_operation_mode[botched]
  list([
    dict({
      'until': HAFakeDatetime(2024, 7, 10, 12, 30, tzinfo=datetime.timezone.utc),
    }),
    dict({
      'until': HAFakeDatetime(2024, 7, 10, 12, 30, tzinfo=datetime.timezone.utc),
    }),
  ])
# ---
# name: test_set_operation_mode[default]
  list([
    dict({
      'until': HAFakeDatetime(2024, 7, 10, 12, 0, tzinfo=datetime.timezone.utc),
    }),
    dict({
      'until': HAFakeDatetime(2024, 7, 10, 12, 0, tzinfo=datetime.timezone.utc),
    }),
  ])
# ---
# name: test_setup_platform[botched][water_heater.domestic_hot_water-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.AWAY_MODE: 'away_mode'>: 'on',
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 23.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Domestic Hot Water',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 43.3,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'auto',
        'on',
        'off',
      ]),
      <WaterHeaterStateAttribute.OPERATION_MODE: 'operation_mode'>: 'off',
      'status': dict({
        'activeFaults': tuple(
        ),
        'dhw_id': '3933910',
        'setpoints': dict({
          'next_sp_from': HAFakeDatetime(2024, 7, 10, 8, 30, tzinfo=zoneinfo.ZoneInfo(key='America/Santiago')),
          'next_sp_state': 'Off',
          'this_sp_from': HAFakeDatetime(2024, 7, 10, 6, 30, tzinfo=zoneinfo.ZoneInfo(key='America/Santiago')),
          'this_sp_state': 'On',
        }),
        'state_status': dict({
          'mode': 'PermanentOverride',
          'state': 'Off',
        }),
        'temperature_status': dict({
          'is_available': True,
          'temperature': 23.0,
        }),
      }),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 14>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <WaterHeaterStateAttribute.TEMPERATURE: 'temperature'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.domestic_hot_water',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_platform[default][water_heater.domestic_hot_water-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.AWAY_MODE: 'away_mode'>: 'on',
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 23.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Domestic Hot Water',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 43.3,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'auto',
        'on',
        'off',
      ]),
      <WaterHeaterStateAttribute.OPERATION_MODE: 'operation_mode'>: 'off',
      'status': dict({
        'activeFaults': tuple(
        ),
        'dhw_id': '3933910',
        'setpoints': dict({
          'next_sp_from': HAFakeDatetime(2024, 7, 10, 13, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/London')),
          'next_sp_state': 'Off',
          'this_sp_from': HAFakeDatetime(2024, 7, 10, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/London')),
          'this_sp_state': 'On',
        }),
        'state_status': dict({
          'mode': 'PermanentOverride',
          'state': 'Off',
        }),
        'temperature_status': dict({
          'is_available': True,
          'temperature': 23.0,
        }),
      }),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 14>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <WaterHeaterStateAttribute.TEMPERATURE: 'temperature'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.domestic_hot_water',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
